--- a/client/css/style.css
+++ b/client/css/style.css
@@ -139,16 +139,16 @@ width: 200px;
   border: 1px dotted red;
 }
 .suggestedWords{
-      width: 186px;
-    height: 35px;
+     width: 328px;
+    height: 50px;
     clear: both;
     border-left: 1px solid;
     border-right: 1px solid;
 }
 
 .display{
-    width: 188px;
-    height: 50px;
+    width: 330px;
+    height: 100px;
     background-color: black;
     color: white;
     font-weight: 800;
@@ -159,9 +159,9 @@ p{
   z-index: -1000;
 }
 .dial{
- margin: 5px;
-    width: 50px;
-    height: 50px;
+margin: 5px;
+    width: 97px;
+    height: 57px;
     float: left;
     text-align: center;
     border: 1px solid black;
@@ -171,7 +171,13 @@ p{
   border: 1px solid mediumvioletred;
 }
 .keypad{
-  width: 186px;
-  height: 186px;
-  border: 1px solid;
+width: 328px;
+    height: 207px;
+    border: 1px solid;
 }
+
+#root{
+    margin: 0 auto;
+    width: 330px;
+}
+
